Add JUnit Tests
35% cowerage